--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+#  Firebase services
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
-  get: ^4.6.6
+  firebase_analytics: ^10.7.4
   google_sign_in: ^6.2.1
+  cloud_firestore: ^4.13.6
+  firebase_messaging: ^14.7.9
+
+  get: ^4.6.6
+  flutter_svg: ^2.0.9
+  logger: ^2.0.2+1
+  fluttertoast: ^8.2.4
+  country_codes: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
