--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   logger: ^2.0.2+1
   fluttertoast: ^8.2.4
   country_codes: ^2.2.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +74,25 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/icons/auth_icons/
+    - assets/icons/nav_bar/
+    - assets/icons/bottom_bar/
+    - assets/icons/misc/
+    - assets/icons/drawer_menu/
+    - assets/flare/
+    - assets/illustrations/
+    - assets/
+
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-SemiBold.ttf
+          weight: 600
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
