--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,29 +12,36 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  #  Firebase services
+  # Firebase services
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
   firebase_analytics: ^10.7.4
   google_sign_in: ^6.0.2
-
   cloud_firestore: ^4.13.6
   firebase_messaging: ^14.7.9
 
+  # Icons
+  cupertino_icons: ^1.0.2
+  iconsax_flutter: ^1.0.0
+
+  # State Management
   get: ^4.6.6
-  flutter_svg: ^2.0.9
+  get_storage: ^2.1.1
+
+  # Utility Packages
+  url_launcher: ^6.2.2
   logger: ^2.0.2+1
+  lottie: ^2.7.0
+  connectivity_plus: ^5.0.2
+  flutter_native_splash: ^2.3.9
+
+  # Product Specific
+  flutter_svg: ^2.0.9
   fluttertoast: ^8.2.4
   country_codes: ^2.2.0
-  url_launcher: ^6.2.2
-  flutter_native_splash: ^2.3.9
   flutter_share: ^2.0.0
   in_app_review: ^2.0.8
   convex_bottom_bar: ^3.2.0
-  lottie: ^2.7.0
-  connectivity_plus: ^5.0.2
-  iconsax_flutter: ^1.0.0
 
 
 dev_dependencies:
