--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   lottie: ^2.7.0
   connectivity_plus: ^5.0.2
   flutter_native_splash: ^2.3.9
+  intl: ^0.19.0
 
   # Product Specific
   flutter_svg: ^2.0.9
@@ -42,6 +43,7 @@ dependencies:
   flutter_share: ^2.0.0
   in_app_review: ^2.0.8
   convex_bottom_bar: ^3.2.0
+  smooth_page_indicator: ^1.1.0
 
 
 dev_dependencies:
