--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/illustrations/
     - assets/images/
     - assets/animations/
+    - assets/user/
     - assets/
 
   fonts:
