--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   in_app_review: ^2.0.8
   convex_bottom_bar: ^3.2.0
   smooth_page_indicator: ^1.1.0
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
