--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_sign_in: ^6.0.2
   cloud_firestore: ^4.13.6
   firebase_messaging: ^14.7.9
+  firebase_storage: ^11.6.0
 
   # Icons
   cupertino_icons: ^1.0.2
@@ -29,12 +30,17 @@ dependencies:
   get_storage: ^2.1.1
 
   # Utility Packages
+  http: ^1.1.2
   url_launcher: ^6.2.2
   logger: ^2.0.2+1
   lottie: ^2.7.0
+  shimmer: ^3.0.0
   connectivity_plus: ^5.0.2
   flutter_native_splash: ^2.3.9
+  image_picker: ^1.0.6
   intl: ^0.19.0
+  smooth_page_indicator: ^1.1.0
+
 
   # Product Specific
   flutter_svg: ^2.0.9
@@ -43,8 +49,6 @@ dependencies:
   flutter_share: ^2.0.0
   in_app_review: ^2.0.8
   convex_bottom_bar: ^3.2.0
-  smooth_page_indicator: ^1.1.0
-  shimmer: ^3.0.0
 
 
 dev_dependencies:
