--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.0.6
   intl: ^0.19.0
   smooth_page_indicator: ^1.1.0
+  cached_network_image: ^3.3.1
 
 
   # Product Specific
